version/0.12/_sources/api/solver/_autosummary/settings/beams_child.rst.txt
:orphan:

.. _beams_child:

beams_child
===========

.. currentmodule:: ansys.fluent.core.solver.settings_231.beams_child

.. autoclass:: beams_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==========================================   ====================================================================

Child                                                                                                     Summary

==========================================   ====================================================================
:ref:`ap_face_zone <ap_face_zone>`               Set the wall face zones to specify the optical aperture surface.

:ref:`beam_length <beam_length>`                                      Set the length of optical beam propagation.

:ref:`ray_points_count <ray_points_count>`          Set the number of grid point in each ray of the optical beam.

:ref:`beam_vector <beam_vector>`                               Set the components of the beam propagation vector.

==========================================   ====================================================================

.. rubric:: Included in:

====================   =================================

Parent                                           Summary

====================   =================================
:ref:`beams <beams>`       Enter the optical beams menu.

====================   =================================

