version/0.27/_sources/api/solver/_autosummary/settings/beams_child.rst.txt
:orphan:

.. _beams_child:

beams_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.beams_child
    :show-inheritance:

.. rubric:: Attributes

==========================================   ===================================================================

Attribute                                                                                                Summary

==========================================   ===================================================================
:ref:`name <name_2>`                                                                         Name of the object.

:ref:`ap_face_zone <ap_face_zone_1>`             Set the wall face zone to specify the optical aperture surface.

:ref:`beam_length <beam_length>`                                     Set the length of optical beam propagation.

:ref:`ray_points_count <ray_points_count>`         Set the number of grid point in each ray of the optical beam.

:ref:`beam_vector <beam_vector>`                              Set the components of the beam propagation vector.

==========================================   ===================================================================

.. rubric:: Included in:

====================   =================================

Parent                                           Summary

====================   =================================
:ref:`beams <beams>`       Enter the optical beams menu.

====================   =================================

